--- a/examples/pandana_example.ipynb
+++ b/examples/pandana_example.ipynb
@@ -349,7 +349,7 @@
    "id": "af62d5d7-3746-4ffa-a082-2106d939d6be",
    "metadata": {},
    "source": [
-    "## Map each observation to it's nearest street intersection\n",
+    "## Map each observation to its nearest street intersection\n",
     "This is a spatial join to the nodes DataFrame of the network"
    ]
   },
